2004-09-06  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/dialog-hbcitrans.c,
	gnc-hbci-getbalance.c, gnc-hbci-gettrans.c: More AqBanking work
	after hints from Martin Preuss <martin@libchipcard.de>.

2004-09-04  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/*.h, *.c, macros/aqbanking.m4,
	configure.in: Major change for HBCI. It is no longer based on the
	openhbci2 library but instead on the aqbanking library
	http://sf.net/projects/aqbanking which is Martin Preuss' successor
	of openhbci2. This means that now aqbanking-0.9.2 is required
	instead of any of the openhbci[2] package. Still needs more
	testing, though.

2004-08-28  Derek Atkins  <derek@ihtfp.com>

	* src/engine/Account.c: fix xaccAccountGetBalanceAsOfDate() to properly
	  compute the balance at the end of the split list.  Fixes #150757.

2004-08-21  Derek Atkins  <derek@ihtfp.com>

	* src/report/standard-reports/advanced-portfolio.scm:
	  Add option to include zero-amount splits in computations.
	  Fixes #143722.

2004-08-19  Derek Atkins  <derek@ihtfp.com>

	Neil Williams's "QOF create: functionality added" patch:

	QOF create: adding functions to be used with
	qof_object_new_instance for new qof_book_merge objects, including
	business objects.

	Small documentation tweak to make QofEntity and QofParam
	structures visible to doxygen.

	* src/import-export/qif-import/qif-dialog-utils.scm:
	  Perry Smith's Null Account Patch.  Make sure the security is
	  a real string before appending an account separator, so we
	  don't try to create a "null" account.

2004-08-19  Derek Atkins  <derek@ihtfp.com>

	* configure.in: change the gtkhtml order to search for >= 1.1 before
	  < 1.1, in order to try to fix #84707 on systems with multiple
	  versions of gtkhtml.

2004-08-12  David Montenegro  <sunrise2000@comcast.net>

        * src/report/standard-reports/trial-balance.scm:
	    src/report/standard-reports/equity-statement.scm: